--- a/app/assets/builds/tailwind-default.css
+++ b/app/assets/builds/tailwind-default.css
@@ -4468,6 +4468,16 @@
     display: block !important;
   }
 }
+@media (min-width: 640px) {
+  .team-grid-members {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+@media (min-width: 1024px) {
+  .team-grid-members {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+}
 @property --tw-translate-x {
   syntax: "*";
   inherits: false;
